--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: grey;
-  font-family: fantasy;
+  font-family: Roboto, "Segoe UI", sans-serif;
   margin: auto;
   height: 100vh;
 }
