--- a/index.css
+++ b/index.css
@@ -1,22 +1,27 @@
+/* Color Palette 
+  White: #ffffff
+  Light Green: #81ff78
+  Normal Green: #73ff54
+  Dark Green: #50ce37
+*/
+
 body {
-  background-color: grey;
+  background-color: #81ff78;
   font-family: Roboto, "Segoe UI", sans-serif;
   margin: auto;
-  height: 100vh;
 }
 
 .tip-calculator {
-  width: 30%;
-  margin: auto;
-  border-width: 2px;
-  border-style: solid;
-  border-color: black;
-  padding: 20px;
-  box-shadow: 0px 3px 0px 0px black;
   background-color: white;
-  border-radius: 20px;
+  width: 50%;
+  margin: 20px auto;
+  border-width: 5px 0px 0px 0px;
+  border-color: rgba(80, 206, 55, 1);
+  border-radius: 15px;
+  border-style: solid;
+  box-shadow: 4px 6px 2px 2px rgba(0, 0, 0, 0.4);
+  padding: 20px;
   text-align: center;
-  transform: translateY(50%);
 }
 
 h1 {
