--- a/index.css
+++ b/index.css
@@ -15,6 +15,12 @@ h1 {
   text-align: center;
 }
 
+hr {
+  margin: 30px auto;
+  width: 80%;
+  background-color: lightgray;
+}
+
 .tip-calculator {
   background-color: white;
   width: 50%;
@@ -35,6 +41,8 @@ h1 {
 }
 
 .percentages button {
+  text-align: center;
+  font-size: 20px;
   cursor: pointer;
   color: white;
   background-color: #50ce37;
@@ -52,6 +60,57 @@ h1 {
   border-color: #50ce37;
 }
 
-.options button {
+.percentages button:focus {
+  outline: none;
+  border-color: black;
+}
+
+.options {
+  margin: 20px;
+}
+
+.bill,
+.options {
+  font-size: 20px;
   text-align: center;
+}
+
+.bill label,
+.options label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.bill span {
+  font-weight: bold;
+}
+
+.bill input {
+  border-radius: 5px;
+  border: 0;
+  border-bottom: solid 2px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.bill input:focus {
+  outline: none;
+  border-color: rgba(80, 206, 55, 1);
+}
+
+.results {
+  font-size: 20px;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px 0;
+  background-color: rgba(80, 206, 55, 0.5);
+}
+
+.current-percentage {
+  border-color: rgba(80, 206, 55, 1);
+  background-color: white;
+}
+
+#tip {
+  margin: 0;
 }
